[package]
name = "q"
description = "More gentle way to grep with predefined URLs set"
version = "0.1.0"
homepage = "https://github.com/9seconds/q"
repository = "https://github.com/9seconds/q.git"
readme = "README.md"
license = "MIT License"
authors = ["Sergey Arkhipov <nineseconds@yandex.ru>"]

[dependencies.regex]
regex = "0.1.8"

[dependencies.clap]
clap = "1.0.3"

[dependencies.xdg-basedir]
xdg-basedir = "0.2.1"

[dependencies.log]
log = "0.3.1"
